fix: z-index fixes

--- a/src/components/ButtonGroup/ButtonGroup.scss
+++ b/src/components/ButtonGroup/ButtonGroup.scss
@@ -1,6 +1,6 @@
 $stacking-order: (
-  item: 10,
-  focused: 20,
+  item: auto,
+  focused: 10,
 );
 
 $plain-horizontal-spacing: spacing(tight);
